--- a/packages/storybook/src/templates/componenten/index.css
+++ b/packages/storybook/src/templates/componenten/index.css
@@ -71,14 +71,6 @@
 }
 
 .rhc-ordered-list {
-  /**
-   * This prevents the Card as Link from overflowing the container on mobile,
-   * as the --rhc-card-as-link-inline-size is set to 328px, as well as the fallback is set to 328px.
-   * This means the issue will always occur on smallest mobile devices which are 320px.
-   * TODO: Discuss the reasoning behind this value with the design team.
-   */
-  --rhc-card-as-link-inline-size: 100%;
-
   list-style-type: none;
   padding-inline-start: 0;
 }
@@ -89,7 +81,8 @@
 }
 
 .rhc-search-form .utrecht-form-field {
-  min-inline-size: 300px;
+  inline-size: 100%;
+  max-inline-size: 300px;
 }
 
 .rhc-search-button {
